添加第三方平台接口文档

--- a/index.html
+++ b/index.html
@@ -10,3 +10,8 @@ title: API Docs
 <div id="futures_content">
 	{% include futures.html %}
 </div>
+
+<!--第三方平台-->
+<div id="third_party_content">
+	{% include third_party.html %}
+</div>
