Add user center related documents

--- a/index.html
+++ b/index.html
@@ -15,3 +15,8 @@ title: API Docs
 <div id="third_party_content">
 	{% include third_party.html %}
 </div>
+
+<!--用户中心-->
+<div id="user_center">
+	{% include user_center.html %}
+</div>
