--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@ title: API Docs
 </div>
 
 <!--用户中心-->
-<div id="user_center">
+<div id="user_center_content">
 	{% include user_center.html %}
 </div>
