--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 title: API Docs
 ---
 <!--现货-->
+<div id="index_content">
+	{% include index.html %}
+</div>
+
+<!--现货-->
 <div id="spot_content">
 	{% include spot.html %}
 </div>
