--- a/search.html
+++ b/search.html
@@ -3,6 +3,15 @@ title: Search
 sitemap: false
 permalink: /search/
 ---
+<!--首页-->
+<div id="index_search">
+	<div class="search-page">
+		<h2>Search Results</h2>
+
+		<p><span id="index-search-process">Loading</span> results <span id="index-search-query-container" style="display: none;">for "<strong id="index-search-query"></strong>"</span></p>
+		<ul id="index-search-results"></ul>
+	</div>
+</div>
 
 <!--现货-->
 <div id="spot_search">
