add margin endpoints

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@ title: API Docs
 	{% include futures.html %}
 </div>
 
+<!--杠杆-->
+<div id="margin_content">
+	{% include margin.html %}
+</div>
+
 <!--第三方平台-->
 <div id="third_party_content">
 	{% include third_party.html %}
