--- a/search.html
+++ b/search.html
@@ -33,7 +33,17 @@ permalink: /search/
 	</div>
 </div>
 
-<!--合约-->
+<!--杠杆-->
+<div id="margin_search">
+	<div class="search-page">
+		<h2>Search Results</h2>
+
+		<p><span id="margin-search-process">Loading</span> results <span id="margin-search-query-container" style="display: none;">for "<strong id="margin-search-query"></strong>"</span></p>
+		<ul id="margin-search-results"></ul>
+	</div>
+</div>
+
+<!--第三方-->
 <div id="third_party_search">
 	<div class="search-page">
 		<h2>Search Results</h2>
