add copy trading modules

--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@ title: API Docs
 	{% include margin.html %}
 </div>
 
+<!--现货跟单-->
+<div id="s_copy_trading_content">
+	{% include s_copy_trading.html %}
+</div>
+
+<!--合约跟单-->
+<div id="f_copy_trading_content">
+	{% include f_copy_trading.html %}
+</div>
+
 <!--第三方平台-->
 <div id="third_party_content">
 	{% include third_party.html %}
