--- a/search.html
+++ b/search.html
@@ -43,6 +43,26 @@ permalink: /search/
 	</div>
 </div>
 
+<!--现货跟单-->
+<div id="s_copy_trading_search">
+	<div class="search-page">
+		<h2>Search Results</h2>
+
+		<p><span id="s-copy-trading-search-process">Loading</span> results <span id="s-copy-trading-search-query-container" style="display: none;">for "<strong id="s-copy-trading-search-query"></strong>"</span></p>
+		<ul id="s-copy-trading-search-results"></ul>
+	</div>
+</div>
+
+<!--合约跟单-->
+<div id="f_copy_trading_search">
+	<div class="search-page">
+		<h2>Search Results</h2>
+
+		<p><span id="f-copy-trading-search-process">Loading</span> results <span id="f-copy-trading-search-query-container" style="display: none;">for "<strong id="f-copy-trading-search-query"></strong>"</span></p>
+		<ul id="f-copy-trading-search-results"></ul>
+	</div>
+</div>
+
 <!--第三方-->
 <div id="third_party_search">
 	<div class="search-page">
