add changelog model

--- a/index.html
+++ b/index.html
@@ -40,3 +40,8 @@ title: API Docs
 <div id="user_center_content">
 	{% include user_center.html %}
 </div>
+
+<!--更新日志-->
+<div id="change_log_content">
+	{% include change_log.html %}
+</div>
